# openDAQ

./: CMakeBasePresets.json  CMakeLists.txt  README.md
.devcontainer/: Dockerfile.dev  devcontainer.json  docker_deb_build.sh
.devcontainer/.vscode-docker/: c_cpp_properties.json
core/opendaq/: CMakeLists.txt
examples/: CMakeLists.txt
examples/cpp/client_local/: client_local.cpp
examples/cpp/device_server/: device_server.cpp
examples/cpp/empty_example/: empty_example.cpp
examples/cpp/function_block_example/: function_block_example.cpp
examples/cpp/mscl_device_server/: CMakeLists.txt  mscl_device_server.cpp
modules/: CMakeLists.txt
modules/mscl_device_module/: CMakeLists.txt
modules/mscl_device_module/src/: CMakeLists.txt  module_dll.cpp  mscl_can_channel_impl.cpp  mscl_channel_impl.cpp  mscl_device_impl.cpp  mscl_device_module_impl.cpp
modules/mscl_device_module/tests/: CMakeLists.txt  test_mscl_device_module.cpp
modules/ref_device_module/src/: CMakeLists.txt  ref_channel_impl.cpp  ref_device_impl.cpp
modules/ref_fb_module/src/: renderer_fb_impl.cpp
modules/wsda_200_device_module/: CMakeLists.txt
modules/wsda_200_device_module/src/: CMakeLists.txt  module_dll.cpp  ref_device_impl.cpp  wsda_200_can_channel_impl.cpp  wsda_200_channel_impl.cpp  wsda_200_device_impl.cpp  wsda_200_device_module_impl.cpp
modules/wsda_200_device_module/tests/: CMakeLists.txt  test_wsda_200_device_module.cpp
modules/wsda_device_module/: CMakeLists.txt
modules/wsda_device_module/src/: CMakeLists.txt  module_dll.cpp  wsda_can_channel_impl.cpp  (+3 more)
(+32 files in other folders)
